# gvhmr-batch-process

./: .gitignore  .gitmodules  Makefile  README.md  alembic.ini
.models/: README.md
Project_Definitions/: 00_Project_Overview.md  01_PRD.md  02_System_Architecture.md  03_API_and_Data_Contracts.md  04_Execution_and_State_Machine.md  05_Repo_and_Deployment_Structure.md  06_Development_Plan.md  07_Test_and_Acceptance.md  08_Risks_and_Future_Options.md
alembic/: env.py
alembic/versions/: 20260320_0001_initial_schema.py  20260323_0002_add_use_dpvo_to_jobs.py  20260326_0003_add_job_retry_fields.py  20260409_0004_allow_assignment_attempt_history.py  20260410_0005_add_upload_source_fps.py
deploy/: README.host-deployment.md  README.remote-worker-deployment.md  compose.base.yml  compose.control-plane.yml  compose.dev.yml  compose.worker.remote.2gpu.yml  compose.worker.remote.yml  compose.worker.yml
deploy/docker/: api.Dockerfile  (+2 more)
models/: README.md
services/api/: pyproject.toml
services/api/src/gvhmr_batch_api/: config.py  container.py  main.py  store.py
services/api/src/gvhmr_batch_api/routes/: artifacts.py  batches.py  dashboard.py  health.py  jobs.py  uploads.py  web.py  workers.py
services/api/src/gvhmr_batch_api/static/: app.js
services/api/src/gvhmr_batch_api/templates/: index.html
services/scheduler/: pyproject.toml
services/scheduler/src/gvhmr_batch_scheduler/: config.py  main.py
services/worker/: pyproject.toml
services/worker/src/gvhmr_batch_worker/: config.py  healthcheck.py  main.py
test/: README.md  export_batch_npz.py  run_batch_test.py
(+10 files in other folders)
