[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gvhmr-batch-api"
version = "0.1.0"
description = "FastAPI service for GVHMR Batch Process."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gvhmr_batch_api"]
