[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gvhmr-batch-scheduler"
version = "0.1.0"
description = "Scheduler service for GVHMR Batch Process."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "redis>=5.0,<6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gvhmr_batch_scheduler"]

